[gd_scene load_steps=4 format=3 uid="uid://m8186tpobhas"]

[ext_resource type="Script" path="res://Game/UI/battleSelect/battle_select.gd" id="1_sqles"]
[ext_resource type="Script" path="res://Game/UI/battleSelect/button_plate.gd" id="2_fmqut"]
[ext_resource type="PackedScene" uid="uid://wj4b1fhrjt8m" path="res://UI/scrolling/scroller.tscn" id="3_hw3og"]

[node name="BattleSelect" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sqles")

[node name="selector" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.67
offset_top = -59.8126
offset_right = -170.67
offset_bottom = -18.8126
grow_horizontal = 2
grow_vertical = 2

[node name="left" type="ColorRect" parent="selector"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 3.0
grow_vertical = 2

[node name="righjt" type="ColorRect" parent="selector"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
grow_horizontal = 0
grow_vertical = 2

[node name="up" type="ColorRect" parent="selector"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 3.0
grow_horizontal = 2

[node name="bottom" type="ColorRect" parent="selector"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
grow_horizontal = 2
grow_vertical = 0

[node name="mainBar" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 511.0
offset_bottom = 164.0
rotation = 0.785398
color = Color(1, 1, 1, 0.0588235)

[node name="buttonsPlate" type="ColorRect" parent="mainBar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.396
offset_top = 9.89949
offset_bottom = -0.0445099
color = Color(0, 1, 1, 0.156863)
script = ExtResource("2_fmqut")

[node name="Scroller" parent="mainBar/buttonsPlate" instance=ExtResource("3_hw3og")]
clip_contents = false
layout_mode = 1
offset_left = 161.586
offset_top = -9.99998
offset_right = -163.414
offset_bottom = -9.99999
padding = Vector2(1, 10)
mode = "x"
preventControlRotatedClipBug = false
isCentered = true

[node name="unrelated_buttonTemplate" type="Control" parent="mainBar/buttonsPlate/Scroller"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 0.00012207
offset_top = 8.48528
offset_right = 40.0001
offset_bottom = 48.4853

[node name="bg" type="ColorRect" parent="mainBar/buttonsPlate/Scroller/unrelated_buttonTemplate"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.5
offset_top = -17.5
offset_right = 17.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="shadow" type="ColorRect" parent="mainBar/buttonsPlate/Scroller/unrelated_buttonTemplate"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -16.0
offset_right = 19.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.505882)

[node name="iconShadow" type="TextureRect" parent="mainBar/buttonsPlate/Scroller/unrelated_buttonTemplate"]
clip_children = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -30.5858
offset_right = 32.0
offset_bottom = 33.4142
grow_horizontal = 2
grow_vertical = 2
rotation = -0.785398
pivot_offset = Vector2(32, 32)
expand_mode = 1
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="mainBar/buttonsPlate/Scroller/unrelated_buttonTemplate/iconShadow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.00004
offset_top = -2.00003
offset_right = -2.00004
offset_bottom = -2.00003
grow_horizontal = 2
grow_vertical = 2

[node name="icon" type="TextureRect" parent="mainBar/buttonsPlate/Scroller/unrelated_buttonTemplate"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -30.5858
offset_right = 32.0
offset_bottom = 33.4142
grow_horizontal = 2
grow_vertical = 2
rotation = -0.785398
pivot_offset = Vector2(32, 32)
expand_mode = 1
stretch_mode = 5

[node name="bar3" type="ColorRect" parent="mainBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.301
anchor_top = 0.307
anchor_right = 0.699
anchor_bottom = 0.331
offset_left = 0.18898
offset_top = -0.046505
offset_right = -0.189026
offset_bottom = 0.0175018
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 1, 0.388235)

[node name="barAnchor" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.498
anchor_top = 1.0
anchor_right = 0.498
anchor_bottom = 1.0
offset_left = 0.279968
offset_right = 0.279968

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 316.0
offset_right = 109.0
offset_bottom = 356.0

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="child_entered_tree" from="mainBar/buttonsPlate" to="mainBar/buttonsPlate" method="_on_child_entered_tree"]
